--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -2,42 +2,103 @@
 
   {{!-- Sheet Header --}}
   <header class="sheet-header">
-    <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
+    <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="195" width="195"/>
     <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name"/></h1>
-      {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
-      use both the "grid" and "grid-Ncol" class where "N" can be any number
-      from 1 to 12 and will create that number of columns.  --}}
-      <div class="resources grid grid-3col">
-
-        {{!-- "flex-group-center" is also defined in the _grid.scss file
-        and it will add a small amount of padding, a border, and will
-        center all of its child elements content and text. --}}
-        <div class="resource flex-group-center">
-          <label for="system.health.value" class="resource-label">Health</label>
-          <div class="resource-content flexrow flex-center flex-between">
-          <input type="text" name="system.health.value" value="{{system.health.value}}" data-dtype="Number"/>
-          <span> / </span>
-          <input type="text" name="system.health.max" value="{{system.health.max}}" data-dtype="Number"/>
+      <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Operator Cover Name"/></h1>
+      <div class="resources grid grid-2col">
+        <div class="stress-box flexcol">
+          <div class="stress flexrow">
+            <a class="flexrow" data-roll-type="" title="rollstress" data-item-id=""><i class="fa-regular fa-dice"></i><h2>Stress</h2></a>
+            <input type="checkbox" name="" checked>
+            <input type="checkbox" name="">
+            <input type="checkbox" name="">
+            <input type="checkbox" name="">
+            <input type="checkbox" name="">
+            <input type="checkbox" name="">
           </div>
-        </div>
-
-        <div class="resource flex-group-center">
-          <label for="system.power.value" class="resource-label">Power</label>
-          <div class="resource-content flexrow flex-center flex-between">
-          <input type="text" name="system.power.value" value="{{system.power.value}}" data-dtype="Number"/>
-          <span> / </span>
-          <input type="text" name="system.power.max" value="{{system.power.max}}" data-dtype="Number"/>
+          <span>Increasing Stress Manifests As:</span>
+          <div class="flexrow">
+            <label for="stress2">2.</label>
+            <input id="stress2" type="text">
           </div>
-        </div>
-
-        <div class="resource flex-group-center">
-          <label for="system.attributes.level.value" class="resource-label">Level</label>
-          <div class="resource-content flexrow flex-center flex-between">
-          <input type="text" name="system.attributes.level.value" value="{{system.attributes.level.value}}" data-dtype="Number"/>
+          <div class="flexrow">
+            <label for="stress3">3.</label>
+            <input id="stress3" type="text">
           </div>
-        </div>
+          <div class="flexrow">
+            <label for="stress4">4.</label>
+            <input id="stress4" type="text">
+          </div>
+          <div class="flexrow">
+            <label for="stress5">5.</label>
+            <input id="stress5" type="text">
+          </div>
 
+        </div>
+        <div class="intel-load-box flexcol">
+          <div class="intel flexrow">
+            <h2>INTEL</h2>
+            <input type="checkbox" name="">
+            <input type="checkbox" name="">
+            <input type="checkbox" name="">
+            <input type="checkbox" name="">
+            <input type="checkbox" name="">
+            <input type="checkbox" name="">
+          </div>
+          <hr>
+          <div class="load-grid">
+            <div class="item">{{!-- empty --}}</div>
+            <h4 class="item">Lt</h4>
+            <h4 class="item">Med</h4>
+            <h4 class="item">Hvy</h4>
+
+            <h3 class="item">Load</h3>
+            <input class="item" type="checkbox" name="">
+            <input class="item" type="checkbox" name="">
+            <input class="item" type="checkbox" name="">
+
+            <h3 class="item">Gear</h3>  
+            <div class="item">
+              <input type="checkbox" name="">
+              <input type="checkbox" name="">
+              <input type="checkbox" name="">
+            </div>
+            <div class="item">
+              <input type="checkbox" name="">
+              <input type="checkbox" name="">
+            </div>
+            <input class="item" type="checkbox" name="">
+          </div>
+          {{!-- <div class="load flexcol">
+            <div class="grid grid-4col">
+              <span></span>
+              <span>Lt</span>
+              <span>Med</span>
+              <span>Hvy</span>
+            </div>
+            <div class="grid grid-4col">
+              <b>Load</b>
+              <input type="checkbox" name="">
+              <input type="checkbox" name="">
+              <input type="checkbox" name="">
+            </div>
+            <div class="grid grid-4col">
+              <b>Gear</b>
+              <div class="flexrow">
+                <input type="checkbox" name="">
+                <input type="checkbox" name="">
+                <input type="checkbox" name="">
+              </div>
+              <div class="flexrow">
+                <input type="checkbox" name="">
+                <input type="checkbox" name="">
+              </div>
+              <div class="flexrow">
+                <input type="checkbox" name="">
+              </div>
+            </div>
+          </div> --}}
+        </div>
       </div>
     </div>
   </header>
@@ -45,63 +106,27 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     {{!-- Default tab is specified in actor-sheet.mjs --}}
-    <a class="item" data-tab="features">Features</a>
-    <a class="item" data-tab="description">Description</a>
-    <a class="item" data-tab="items">Items</a>
-    <a class="item" data-tab="spells">Spells</a>
-    <a class="item" data-tab="effects">Effects</a>
+    <a class="item" data-tab="main">Expertise, Actions &amp; Gear</a>
+    <a class="item" data-tab="biography">Biography</a>
+    <a class="item" data-tab="relationships">Relationships</a>
   </nav>
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
 
-    {{!-- Owned Features Tab --}}
-    <div class="tab features" data-group="primary" data-tab="features">
-      <section class="grid grid-3col">
-        <aside class="sidebar">
-
-          {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
-          use both the "grid" and "grid-Ncol" class where "N" can be any number
-          from 1 to 12 and will create that number of columns.  --}}
-          <div class="abilities flexcol">
-            {{#each system.abilities as |ability key|}}
-            <div class="ability flexrow flex-group-center">
-              <label for="system.abilities.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{ability.label}}</label>
-              <input type="text" name="system.abilities.{{key}}.value" value="{{ability.value}}" data-dtype="Number"/>
-              <span class="ability-mod rollable" data-roll="d20+@abilities.{{key}}.mod" data-label="{{ability.label}}">{{numberFormat ability.mod decimals=0 sign=true}}</span>
-            </div>
-            {{/each}}
-          </div>
-        </aside>
-
-        {{!-- For the main features list, span the right two columns --}}
-        <section class="main grid-span-2">
-          {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in module/helpers/templates.mjs --}}
-          {{> "systems/againstthedarkconspiracy/templates/actor/parts/actor-features.html"}}
-        </section>
-
-      </section>
+    {{!-- Expertise, Actions & Gear Tab --}}
+    <div class="tab main" data-group="primary" data-tab="main">
+      {{> "systems/againstthedarkconspiracy/templates/actor/parts/actor-main.html"}}
     </div>
 
     {{!-- Biography Tab --}}
-    <div class="tab biography" data-group="primary" data-tab="description">
-      {{!-- If you want TinyMCE editors to output inline rolls when rendered, you need to pass the actor's roll data to the rollData property. --}}
-      {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
+    <div class="tab biography" data-group="primary" data-tab="biography">
+      {{> "systems/againstthedarkconspiracy/templates/actor/parts/actor-biography.html"}}
     </div>
 
-    {{!-- Owned Items Tab --}}
-    <div class="tab items" data-group="primary" data-tab="items">
-       {{> "systems/againstthedarkconspiracy/templates/actor/parts/actor-items.html"}}
-    </div>
-
-    {{!-- Owned Spells Tab --}}
-    <div class="tab spells" data-group="primary" data-tab="spells">
-      {{> "systems/againstthedarkconspiracy/templates/actor/parts/actor-spells.html"}}
-    </div>
-
-    {{!-- Active Effects Tab --}}
-    <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-      {{> "systems/againstthedarkconspiracy/templates/actor/parts/actor-effects.html"}}
+    {{!-- relationships Tab --}}
+    <div class="tab relationships" data-group="primary" data-tab="relationships">
+      {{> "systems/againstthedarkconspiracy/templates/actor/parts/actor-relationships.html"}}
     </div>
 
   </section>
