header mostly good

--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -1,3 +1,15 @@
-<div>
-  Main stuff goes here.
+<div class="main flexrow">
+  <div class="main-left flexcol">
+    <div class="box">
+      left top
+    </div>
+    <div class="box">
+      left bottom
+    </div>
+  </div>
+
+  <div class="main-right box">
+    right
+  </div>
+  
 </div>
