--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -16,6 +16,18 @@ h4 {
   // border: none;
 }
 
+.box {
+  border: 1px solid black;
+  background-color: rgb(128 128 128 / 5%);
+  padding: 5px;
+  margin: 5px;
+}
+
+.window-content {
+  margin: 0;
+  padding: 0;
+}
+
 .sheet-header {
   flex: 0 auto;
   overflow: hidden;
@@ -23,12 +35,13 @@ h4 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
-  margin-bottom: 10px;
+  margin: 5px;
 
   .profile-img {
-    flex: 0 0 195px;
-    height: 195px;
+    flex: 0 0 190px;
+    height: 190px;
     margin-right: 5px;
+    margin-left: 5px;
   }
 
   .header-fields {
@@ -36,9 +49,10 @@ h4 {
   }
 
   h1.charname {
-    height: 40px;
+    height: 30px;
     padding: 0px;
-    margin: 0 0 5px 0;
+    margin: 5px 5px 5px 5px;
+    font-size: 1.5em;
 
     input {
       width: 100%;
@@ -49,12 +63,9 @@ h4 {
 
   .resources {
     margin: 0;
-    gap: 5px;
+    gap: 0;
 
     .stress-box {
-      border: 1px solid black;
-      padding: 5px;
-      background-color: rgb(128 128 128 / 20%);
 
       .stress {
         align-items: center;
@@ -108,9 +119,6 @@ h4 {
     }
 
     .intel-load-box {
-      border: 1px solid black;
-      padding: 5px;
-      background-color: rgb(128 128 128 / 20%);
 
       h3 {
         margin: 0;
@@ -125,7 +133,9 @@ h4 {
         width: -webkit-fill-available;
         margin: 0;
         padding: 0;
-        border: 1px solid black;
+        border: none;
+        border-top: 1px solid black;
+        margin: 5px 0 5px 0;
       }
 
       .intel {
@@ -164,6 +174,12 @@ h4 {
   }
 }
 
+nav.sheet-tabs {
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    background-color: rgb(128 128 128 / 20%);
+}
+
 .sheet-tabs {
   flex: 0;
 }
@@ -172,6 +188,21 @@ h4 {
 .sheet-body .tab,
 .sheet-body .tab .editor {
   height: 100%;
+}
+
+.sheet-body {
+  margin: 5px;
+
+  .main {
+
+    .main-left {
+      flex-grow: 3;
+    }
+
+    .main-right {
+      flex-grow: 2;
+    }
+  }
 }
 
 .tox {
