--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -2,11 +2,11 @@
 
   {{!-- Sheet Header --}}
   <header class="sheet-header">
-    <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="195" width="195"/>
+    <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="190" width="190"/>
     <div class="header-fields">
       <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Operator Cover Name"/></h1>
       <div class="resources grid grid-2col">
-        <div class="stress-box flexcol">
+        <div class="stress-box flexcol box">
           <div class="stress flexrow">
             <a class="flexrow" data-roll-type="" title="rollstress" data-item-id=""><i class="fa-regular fa-dice"></i><h2>Stress</h2></a>
             <input type="checkbox" name="" checked>
@@ -35,7 +35,7 @@
           </div>
 
         </div>
-        <div class="intel-load-box flexcol">
+        <div class="intel-load-box flexcol box">
           <div class="intel flexrow">
             <h2>INTEL</h2>
             <input type="checkbox" name="">
