expertise layout donish

--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -16,20 +16,20 @@
             <input type="checkbox" name="">
             <input type="checkbox" name="">
           </div>
-          <span>Increasing Stress Manifests As:</span>
-          <div class="flexrow">
+          <span class="full-width">Increasing Stress Manifests As:</span>
+          <div class="flexrow full-width">
             <label for="stress2">2.</label>
             <input id="stress2" type="text">
           </div>
-          <div class="flexrow">
+          <div class="flexrow full-width">
             <label for="stress3">3.</label>
             <input id="stress3" type="text">
           </div>
-          <div class="flexrow">
+          <div class="flexrow full-width">
             <label for="stress4">4.</label>
             <input id="stress4" type="text">
           </div>
-          <div class="flexrow">
+          <div class="flexrow full-width">
             <label for="stress5">5.</label>
             <input id="stress5" type="text">
           </div>
@@ -46,7 +46,7 @@
             <input type="checkbox" name="">
           </div>
           <hr>
-          <div class="load-grid">
+          <div class="load-grid full-width">
             <div class="item">{{!-- empty --}}</div>
             <h4 class="item">Lt</h4>
             <h4 class="item">Med</h4>
@@ -69,35 +69,6 @@
             </div>
             <input class="item" type="checkbox" name="">
           </div>
-          {{!-- <div class="load flexcol">
-            <div class="grid grid-4col">
-              <span></span>
-              <span>Lt</span>
-              <span>Med</span>
-              <span>Hvy</span>
-            </div>
-            <div class="grid grid-4col">
-              <b>Load</b>
-              <input type="checkbox" name="">
-              <input type="checkbox" name="">
-              <input type="checkbox" name="">
-            </div>
-            <div class="grid grid-4col">
-              <b>Gear</b>
-              <div class="flexrow">
-                <input type="checkbox" name="">
-                <input type="checkbox" name="">
-                <input type="checkbox" name="">
-              </div>
-              <div class="flexrow">
-                <input type="checkbox" name="">
-                <input type="checkbox" name="">
-              </div>
-              <div class="flexrow">
-                <input type="checkbox" name="">
-              </div>
-            </div>
-          </div> --}}
         </div>
       </div>
     </div>
