--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -1,7 +1,65 @@
 <div class="main flexrow">
   <div class="main-left flexcol">
-    <div class="box">
-      left top
+    <div class="box expertise-grid">
+      <h3>Professional History</h3>
+      <div><!-- empty --></div>
+      <h3>Expertise</h3>
+      <input type="text" id="nation-org">
+      <div><!-- empty --></div>
+      <input type="text" id="init-expertise" value="Small Arms & Hand-to-Hand" disabled>
+      <select name="worked-for" id="worked-for">
+        <option value="" disabled selected>Who did you work for?</option>
+        <option value="criminal-organisation">Criminal Organisation</option>
+        <option value="espionage-service">Espionage Service</option>
+        <option value="law-enforcement">Law Enforcement</option>
+        <option value="signals-intelligence">Signals Intelligence</option>
+        <option value="special-forces">Special Forces</option>
+      </select>
+      <div>></div>
+      <input type="text" id="expertise1">
+      <div class="specialism flexrow">
+        <input type="checkbox" id="specialism-used">
+        <select name="specialism" id="specialism">
+          <option value="" disabled selected>Your Specialism was...</option>
+          <option value="analyst">Analyst</option>
+          <option value="assassin">Assassin</option>
+          <option value="burglar">Burglar</option>
+          <option value="driver">Driver</option>
+          <option value="false-face">False-face</option>
+          <option value="hacker">Hacker</option>
+          <option value="handler">Handler</option>
+          <option value="sparks">Sparks</option>
+        </select>
+      </div>
+      <div>></div>
+      <input type="text" id="expertise2">
+      <div>
+        <span>Expertise Available?</span>
+        <label class="switch">
+          <input type="checkbox">
+          <span class="slider round"></span>
+        </label>
+      </div>
+      <div><!-- empty --></div>
+      <select name="expertise3" id="expertise3">
+        <option value="" disabled selected>...choose a final Expertise</option>
+        <option value="authority">Authority</option>
+        <option value="deadly">Deadly</option>
+        <option value="digital-intrusion">Digital Intrusion</option>
+        <option value="disguise">Disguise</option>
+        <option value="insight">Insight</option>
+        <option value="intrusion">Intrusion</option>
+        <option value="larceny">Larceny</option>
+        <option value="military-fieldcraft">Military Fieldcraft</option>
+        <option value="negotiation">Negotiation</option>
+        <option value="persuasion">Persuasion</option>
+        <option value="research">Research</option>
+        <option value="surveillance">Surveillance</option>
+        <option value="technical">Technical</option>
+        <option value="tradecraft">Tradecraft</option>
+        <option value="vehicles">Vehicles</option>
+        <option value="lore">Lore</option>
+      </select>
     </div>
     <div class="box">
       left bottom
