--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -21,6 +21,11 @@ h4 {
   background-color: rgb(128 128 128 / 5%);
   padding: 5px;
   margin: 5px;
+  align-items: center;
+
+  .full-width {
+    width: -webkit-fill-available;
+  }
 }
 
 .window-content {
@@ -201,6 +206,45 @@ nav.sheet-tabs {
 
     .main-right {
       flex-grow: 2;
+    }
+
+    .expertise-grid {
+      display: grid;
+      grid-template-columns: minmax(20px, 1fr) 10px minmax(20px, 1fr);
+      grid-template-rows: repeat(5, minmax(10px, 1fr));
+      grid-column-gap: 5px;
+      row-gap: 5px;
+
+      h3 {
+        font-weight: bold;
+        margin: 0;
+      }
+
+      select {
+        min-width: 0;
+        max-width: 100%;
+      }
+
+      .specialism {
+        flex-wrap: nowrap;
+
+        input[type=checkbox] {
+          margin-left: 0;
+          margin-right: 2px;
+          flex-grow: 0;
+        }
+      }
+
+      .expertise-available {
+        label {
+          flex-grow: 1;
+        }
+
+        span {
+          margin-right: 5px;
+          flex-grow: 2;
+        }
+      }
     }
   }
 }
