--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -33,8 +33,8 @@
       </div>
       <div>></div>
       <input type="text" id="expertise2">
-      <div>
-        <span>Expertise Available?</span>
+      <div class="flexrow expertise-available">
+        <div>Expertise Available?</div>
         <label class="switch">
           <input type="checkbox">
           <span class="slider round"></span>
