--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -19,19 +19,19 @@
           <span class="full-width">Increasing Stress Manifests As:</span>
           <div class="flexrow full-width">
             <label for="stress2">2.</label>
-            <input id="stress2" type="text">
+            <input class="underline-input" id="stress2" type="text">
           </div>
           <div class="flexrow full-width">
             <label for="stress3">3.</label>
-            <input id="stress3" type="text">
+            <input class="underline-input" id="stress3" type="text">
           </div>
           <div class="flexrow full-width">
             <label for="stress4">4.</label>
-            <input id="stress4" type="text">
+            <input class="underline-input" id="stress4" type="text">
           </div>
           <div class="flexrow full-width">
             <label for="stress5">5.</label>
-            <input id="stress5" type="text">
+            <input class="underline-input" id="stress5" type="text">
           </div>
 
         </div>
