--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -4,9 +4,9 @@
       <h3>Professional History</h3>
       <div><!-- empty --></div>
       <h3>Expertise</h3>
-      <input type="text" id="nation-org">
+      <input class="underline-input" type="text" id="nation-org" placeholder="Nation/Organisation">
       <div><!-- empty --></div>
-      <input type="text" id="init-expertise" value="Small Arms & Hand-to-Hand" disabled>
+      <input class="underline-input" type="text" id="init-expertise" value="Small Arms & Hand-to-Hand" disabled>
       <select name="worked-for" id="worked-for">
         <option value="" disabled selected>Who did you work for?</option>
         <option value="criminal-organisation">Criminal Organisation</option>
@@ -15,8 +15,8 @@
         <option value="signals-intelligence">Signals Intelligence</option>
         <option value="special-forces">Special Forces</option>
       </select>
-      <div>></div>
-      <input type="text" id="expertise1">
+      <div><i class="fa-solid fa-caret-right"></i></div>
+      <input class="underline-input" type="text" id="expertise1" placeholder="-" disabled>
       <div class="specialism flexrow">
         <input type="checkbox" id="specialism-used">
         <select name="specialism" id="specialism">
@@ -31,8 +31,8 @@
           <option value="sparks">Sparks</option>
         </select>
       </div>
-      <div>></div>
-      <input type="text" id="expertise2">
+      <div><i class="fa-solid fa-caret-right"></i></div>
+      <input class="underline-input" type="text" id="expertise2" placeholder="-" disabled>
       <div class="flexrow expertise-available">
         <div>Expertise Available?</div>
         <label class="switch">
