--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -16,6 +16,14 @@ h4 {
   // border: none;
 }
 
+.underline-input {
+  box-sizing: border-box;
+  border: none;
+  background: none;
+  border-bottom: 1px solid black;
+  border-radius: 0;
+}
+
 .box {
   border: 1px solid black;
   background-color: rgb(128 128 128 / 5%);
@@ -112,11 +120,6 @@ h4 {
       }
 
       input[type=text] {
-        box-sizing: border-box;
-        border: none;
-        background: none;
-        border-bottom: 1px solid black;
-        border-radius: 0;
         height: 15px;
         padding-top: 0px;
         margin-top: 5px;
@@ -199,6 +202,19 @@ nav.sheet-tabs {
   margin: 5px;
 
   .main {
+
+    input[type="text"]:disabled {
+      color: #605f57;
+    }
+    
+    input[type="text"]:disabled:hover {
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      border: none;
+      background: none;
+      border-bottom: 1px solid black;
+      border-radius: 0;
+    }
 
     .main-left {
       flex-grow: 3;
