--- a/scss/global/_components.scss
+++ b/scss/global/_components.scss
@@ -24,6 +24,11 @@
         -webkit-transition: .4s;
         transition: .4s;
     }
+
+    .slider:hover, .slider:active, .slider:focus {
+        -webkit-box-shadow: 0 0 5px $color-shadow-primary;
+        box-shadow: 0 0 5px $color-shadow-primary;
+    }
     
     .slider:before {
         position: absolute;
@@ -38,11 +43,11 @@
     }
     
     input:checked + .slider {
-        background-color: #2196F3;
+        background-color: #823c3c;
     }
     
     input:focus + .slider {
-        box-shadow: 0 0 1px #2196F3;
+        box-shadow: 0 0 1px #823c3c;
     }
     
     input:checked + .slider:before {
