--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -67,7 +67,13 @@
   </div>
 
   <div class="main-right box">
-    right
+    <!-- Testing collapsable things -->
+    <details>
+      <summary><button>here</button></summary>
+      <hr>
+      Content goes here. Content goes here. Content goes here. Content goes here.
+    </details>
+
   </div>
   
 </div>
