--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -12,9 +12,9 @@ h3 {
   border: none;
 }
 
-h4 {
-  // border: none;
-}
+// h4 {
+//   // border: none;
+// }
 
 .underline-input {
   box-sizing: border-box;
