--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -68,11 +68,13 @@
 
   <div class="main-right box">
     <!-- Testing collapsable things -->
-    <details>
-      <summary><button>here</button></summary>
-      <hr>
-      Content goes here. Content goes here. Content goes here. Content goes here.
-    </details>
+    <div class="collapsable">
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <details>
+        <summary>Do a thing.</summary>
+        <p>Content goes here. Content goes here. Content goes here. Content goes here.</p>
+      </details>
+    </div>
 
   </div>
   
