playing with collapsable comp

--- a/scss/global/_components.scss
+++ b/scss/global/_components.scss
@@ -68,95 +68,11 @@
 
 // testing
 .collapsable {
-    // details {
-    //     border-radius: 0.5rem;
-    //     margin: 1rem ;
-    //     transition: 50ms;
-    //   }
-    //   details[open] {
-    //       padding-bottom: 1em;
-    //   }  
-      
-    //   label {
-    //     color: green;
-    //     background: palegoldenrod;
-    //   }
-    //   summary::before,
-    //   summary::after {
-    //       transition: 200ms;
-    //   }
-      
-    //   summary:first-child {
-    //     color: red;
-    //   }
-      
-    //   summary {
-    //       position: relative;
-    //   }
-      
-    //   summary::before,
-    //   summary::after {
-    //       content: '';
-    //   }
-    //   summary::before,
-    //   summary::after {
-    //       width: .75em;
-    //       height: 0;
-    //       border-bottom: 2px solid;
-    //       position: absolute;
-    //       top: calc(50% - 1px);
-    //       right: 0;
-    //       transform: translateY(-50%);
-    //   }
-    //   summary::after {
-    //       transform: rotate(90deg);
-    //       transform-origin: 50% 50%;
-    //   }
-    //   [open] summary::after {
-    //       transform: rotate(0deg);
-    //   }
-    //   /* styles ported over from the second example */
-    //   details {
-    //       border: 1px solid;
-    //       padding: 0 1rem;
-    //       background: white;
-    //   }
-    //   details + details {
-    //       border-top: none;
-    //   }
-    //   details[open] {
-    //         padding-bottom: 1em;
-    //   }
-    //   summary {
-    //       padding: 1rem 2em 1rem 0;
-    //       font-size: 1.25rem;
-    //       font-weight: bold;
-    //       cursor: pointer;
-    //   }
-      
-    //   :root {
-    //       font-size: 112.5%;
-    //       line-height: 1.5;
-    //   }
-    //   body {
-    //       background: #a4bacc99;
-    //       color: #226daa;
-    //       font-family: Raleway, sans-serif;
-    //       margin: 1rem;
-    //   }
-    //   * {
-    //       box-sizing: border-box;
-    //   }
-      
-    //   aside {
-    //       width: 38em;
-    //       max-width: 98vw;
-    //   }
 
     a {
         position: relative;
-        top: 5px;
-        right: -226px;
+        top: 8px;
+        right: -210px;
         height: 0;
         display: flex;
         width: fit-content;
@@ -164,17 +80,22 @@
 
     details > summary {
         padding: 4px;
-        width: 220px;
-        // background-color: #eeeeee;
+        width: 200px;
         border: none;
-        // box-shadow: 1px 1px 2px #bbbbbb;
         cursor: pointer;
+    }
+
+    summary {
+        font-size: 1.25em;
+        font-weight: bold;
+    }
+
+    summary::marker {
+        margin-right: 10px;
     }
       
     details > p {
-        // background-color: #eeeeee;
         padding: 4px;
         margin: 0;
-        // box-shadow: 1px 1px 2px #bbbbbb;
-    }
+    }    
 }
