--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -66,16 +66,31 @@
     </div>
   </div>
 
-  <div class="main-right box">
+  <div class="main-right">
     <!-- Testing collapsable things -->
-    <div class="collapsable">
+    <div class="collapsable box">
       <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
       <details>
-        <summary>Do a thing.</summary>
-        <p>Content goes here. Content goes here. Content goes here. Content goes here.</p>
+        <summary>Investigate</summary>
+        <p>When you want to ask a question about someone, something,  or somewhere. Or you want control to reveal something about the situation.</p>
       </details>
     </div>
 
+    <div class="collapsable box">
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <details>
+        <summary>Take Them Out</summary>
+        <p>If you fight or shoot at a threat or they attack you, say what success looks like: Harm them, Subdue them, Avoid their attempt to hurt you, some other outcome.</p>
+      </details>
+    </div>
+
+    <div class="collapsable box">
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <details>
+        <summary>Chase Them Down</summary>
+        <p>When they are getting away and Control agrees there's a reasonable way for you to catch them before they escape, and their Powers don't make it impossible.</p>
+      </details>
+    </div>
   </div>
   
 </div>
