--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -66,7 +66,7 @@
     </div>
   </div>
 
-  <div class="main-right">
+  <div class="actions">
     <!-- Testing collapsable things -->
     <div class="collapsable box">
       <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
@@ -87,8 +87,66 @@
     <div class="collapsable box">
       <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
       <details>
+        <summary>Roll for Harm</summary>
+        <p>TBD</p>
+      </details>
+    </div>
+    
+    <div class="collapsable box">
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <details>
+        <summary>Flee For Your Life</summary>
+        <p>When you want to escape your fate by leaving the scene and Control agrees there's a reasonable route by which you could get away</p>
+      </details>
+    </div>
+
+    <div class="collapsable box">
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <details>
         <summary>Chase Them Down</summary>
-        <p>When they are getting away and Control agrees there's a reasonable way for you to catch them before they escape, and their Powers don't make it impossible.</p>
+        <p>TBD</p>
+      </details>
+    </div>
+
+    <hr>
+
+    <div class="collapsable box">
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <details>
+        <summary>Behave Badly</summary>
+        <p>TBD</p>
+      </details>
+    </div>
+
+    <div class="collapsable box">
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <details>
+        <summary>Indulge a Vice</summary>
+        <p>TBD</p>
+      </details>
+    </div>
+
+    <div class="collapsable box">
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <details>
+        <summary>Seek solace in a relationship</summary>
+        <p>TBD</p>
+      </details>
+    </div>
+    
+    <div class="collapsable box">
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <details>
+        <summary>Reveal some of your history together</summary>
+        <p>TBD</p>
+      </details>
+    </div>
+    
+    <div class="collapsable box">
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <details>
+        <summary>Seek relief from the horror</summary>
+        <p>TBD</p>
       </details>
     </div>
   </div>
