--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -1,40 +1,40 @@
 <div class="main flexrow">
   <div class="main-left flexcol">
     <div class="box expertise-grid">
-      <h3>Professional History</h3>
+      <h3>{{localize "ATDC.actor.expertise.professionalHistory.label"}}</h3>
       <div><!-- empty --></div>
-      <h3>Expertise</h3>
-      <input class="underline-input" type="text" id="nation-org" placeholder="Nation/Organisation">
+      <h3>{{localize "ATDC.actor.expertise.label"}}</h3>
+      <input class="underline-input" type="text" id="nation-org" placeholder="{{localize "ATDC.actor.expertise.nationOrganisation.placeholder"}}">
       <div><!-- empty --></div>
-      <input class="underline-input" type="text" id="init-expertise" value="Small Arms & Hand-to-Hand" disabled>
+      <input class="underline-input" type="text" id="init-expertise" value="{{localize "ATDC.actor.expertise.initial.value"}}" disabled>
       <select name="worked-for" id="worked-for">
-        <option value="" disabled selected>Who did you work for?</option>
-        <option value="criminal-organisation">Criminal Organisation</option>
-        <option value="espionage-service">Espionage Service</option>
-        <option value="law-enforcement">Law Enforcement</option>
-        <option value="signals-intelligence">Signals Intelligence</option>
-        <option value="special-forces">Special Forces</option>
+        <option value="" disabled selected>{{localize "ATDC.actor.expertise.workedFor.placeholder"}}</option>
+        <option value="worked-for1">{{localize "ATDC.actor.expertise.workedFor.option.1"}}</option>
+        <option value="worked-for2">{{localize "ATDC.actor.expertise.workedFor.option.2"}}</option>
+        <option value="worked-for3">{{localize "ATDC.actor.expertise.workedFor.option.3"}}</option>
+        <option value="worked-for4">{{localize "ATDC.actor.expertise.workedFor.option.4"}}</option>
+        <option value="worked-for5">{{localize "ATDC.actor.expertise.workedFor.option.5"}}</option>
       </select>
       <div><i class="fa-solid fa-caret-right"></i></div>
       <input class="underline-input" type="text" id="expertise1" placeholder="-" disabled>
       <div class="specialism flexrow">
         <input type="checkbox" id="specialism-used">
         <select name="specialism" id="specialism">
-          <option value="" disabled selected>Your Specialism was...</option>
-          <option value="analyst">Analyst</option>
-          <option value="assassin">Assassin</option>
-          <option value="burglar">Burglar</option>
-          <option value="driver">Driver</option>
-          <option value="false-face">False-face</option>
-          <option value="hacker">Hacker</option>
-          <option value="handler">Handler</option>
-          <option value="sparks">Sparks</option>
+          <option value="" disabled selected>{{localize "ATDC.actor.expertise.specialism.placeholder"}}</option>
+          <option value="specialism1">{{localize "ATDC.actor.expertise.specialism.option.1"}}</option>
+          <option value="specialism2">{{localize "ATDC.actor.expertise.specialism.option.2"}}</option>
+          <option value="specialism3">{{localize "ATDC.actor.expertise.specialism.option.3"}}</option>
+          <option value="specialism4">{{localize "ATDC.actor.expertise.specialism.option.4"}}</option>
+          <option value="specialism5">{{localize "ATDC.actor.expertise.specialism.option.5"}}</option>
+          <option value="specialism6">{{localize "ATDC.actor.expertise.specialism.option.6"}}</option>
+          <option value="specialism7">{{localize "ATDC.actor.expertise.specialism.option.7"}}</option>
+          <option value="specialism8">{{localize "ATDC.actor.expertise.specialism.option.8"}}</option>
         </select>
       </div>
       <div><i class="fa-solid fa-caret-right"></i></div>
       <input class="underline-input" type="text" id="expertise2" placeholder="-" disabled>
       <div class="flexrow expertise-available">
-        <div>Expertise Available?</div>
+        <div>{{localize "ATDC.actor.expertise.available.label"}}</div>
         <label class="switch">
           <input type="checkbox">
           <span class="slider round"></span>
@@ -42,23 +42,23 @@
       </div>
       <div><!-- empty --></div>
       <select name="expertise3" id="expertise3">
-        <option value="" disabled selected>...choose a final Expertise</option>
-        <option value="authority">Authority</option>
-        <option value="deadly">Deadly</option>
-        <option value="digital-intrusion">Digital Intrusion</option>
-        <option value="disguise">Disguise</option>
-        <option value="insight">Insight</option>
-        <option value="intrusion">Intrusion</option>
-        <option value="larceny">Larceny</option>
-        <option value="military-fieldcraft">Military Fieldcraft</option>
-        <option value="negotiation">Negotiation</option>
-        <option value="persuasion">Persuasion</option>
-        <option value="research">Research</option>
-        <option value="surveillance">Surveillance</option>
-        <option value="technical">Technical</option>
-        <option value="tradecraft">Tradecraft</option>
-        <option value="vehicles">Vehicles</option>
-        <option value="lore">Lore</option>
+        <option value="" disabled selected>{{localize "ATDC.actor.expertise.final.placeholder"}}</option>
+        <option value="final1">{{localize "ATDC.actor.expertise.final.option.1"}}</option>
+        <option value="final2">{{localize "ATDC.actor.expertise.final.option.2"}}</option>
+        <option value="final3">{{localize "ATDC.actor.expertise.final.option.3"}}</option>
+        <option value="final4">{{localize "ATDC.actor.expertise.final.option.4"}}</option>
+        <option value="final5">{{localize "ATDC.actor.expertise.final.option.5"}}</option>
+        <option value="final6">{{localize "ATDC.actor.expertise.final.option.6"}}</option>
+        <option value="final7">{{localize "ATDC.actor.expertise.final.option.7"}}</option>
+        <option value="final8">{{localize "ATDC.actor.expertise.final.option.8"}}</option>
+        <option value="final9">{{localize "ATDC.actor.expertise.final.option.9"}}</option>
+        <option value="final10">{{localize "ATDC.actor.expertise.final.option.10"}}</option>
+        <option value="final11">{{localize "ATDC.actor.expertise.final.option.11"}}</option>
+        <option value="final12">{{localize "ATDC.actor.expertise.final.option.12"}}</option>
+        <option value="final13">{{localize "ATDC.actor.expertise.final.option.13"}}</option>
+        <option value="final14">{{localize "ATDC.actor.expertise.final.option.14"}}</option>
+        <option value="final15">{{localize "ATDC.actor.expertise.final.option.15"}}</option>
+        <option value="final16">{{localize "ATDC.actor.expertise.final.option.16"}}</option>
       </select>
     </div>
     <div class="box">
@@ -69,84 +69,84 @@
   <div class="actions">
     <!-- Testing collapsable things -->
     <div class="collapsable box">
-      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.roll.label"}}</a>
       <details>
-        <summary>Investigate</summary>
-        <p>When you want to ask a question about someone, something,  or somewhere. Or you want control to reveal something about the situation.</p>
+        <summary>{{localize "ATDC.actor.actions.investigate.label"}}</summary>
+        <p>{{localize "ATDC.actor.actions.investigate.description"}}</p>
       </details>
     </div>
 
     <div class="collapsable box">
-      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.roll.label"}}</a>
       <details>
-        <summary>Take Them Out</summary>
-        <p>If you fight or shoot at a threat or they attack you, say what success looks like: Harm them, Subdue them, Avoid their attempt to hurt you, some other outcome.</p>
+        <summary>{{localize "ATDC.actor.actions.takeThemOut.label"}}</summary>
+        <p>{{localize "ATDC.actor.actions.takeThemOut.description"}}</p>
       </details>
     </div>
 
     <div class="collapsable box">
-      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.roll.label"}}</a>
       <details>
-        <summary>Roll for Harm</summary>
-        <p>TBD</p>
+        <summary>{{localize "ATDC.actor.actions.harm.label"}}</summary>
+        <p>{{localize "ATDC.actor.actions.harm.description"}}</p>
       </details>
     </div>
     
     <div class="collapsable box">
-      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.roll.label"}}</a>
       <details>
-        <summary>Flee For Your Life</summary>
-        <p>When you want to escape your fate by leaving the scene and Control agrees there's a reasonable route by which you could get away</p>
+        <summary>{{localize "ATDC.actor.actions.flee.label"}}</summary>
+        <p>{{localize "ATDC.actor.actions.flee.description"}}</p>
       </details>
     </div>
 
     <div class="collapsable box">
-      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.roll.label"}}</a>
       <details>
-        <summary>Chase Them Down</summary>
-        <p>TBD</p>
+        <summary>{{localize "ATDC.actor.actions.chase.label"}}</summary>
+        <p>{{localize "ATDC.actor.actions.chase.description"}}</p>
       </details>
     </div>
 
     <hr>
 
     <div class="collapsable box">
-      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.roll.label"}}</a>
       <details>
-        <summary>Behave Badly</summary>
-        <p>TBD</p>
+        <summary>{{localize "ATDC.actor.seekRelief.behaveBadly.label"}}</summary>
+        <p>{{localize "ATDC.actor.seekRelief.behaveBadly.description"}}</p>
       </details>
     </div>
 
     <div class="collapsable box">
-      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.roll.label"}}</a>
       <details>
-        <summary>Indulge a Vice</summary>
-        <p>TBD</p>
+        <summary>{{localize "ATDC.actor.seekRelief.vice.label"}}</summary>
+        <p>{{localize "ATDC.actor.seekRelief.vice.description"}}</p>
       </details>
     </div>
 
     <div class="collapsable box">
-      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.roll.label"}}</a>
       <details>
-        <summary>Seek solace in a relationship</summary>
-        <p>TBD</p>
+        <summary>{{localize "ATDC.actor.seekRelief.seekSolaceRelationship.label"}}</summary>
+        <p>{{localize "ATDC.actor.seekRelief.seekSolaceRelationship.description"}}</p>
       </details>
     </div>
     
     <div class="collapsable box">
-      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.roll.label"}}</a>
       <details>
-        <summary>Reveal some of your history together</summary>
-        <p>TBD</p>
+        <summary>{{localize "ATDC.actor.seekRelief.revealHistory.label"}}</summary>
+        <p>{{localize "ATDC.actor.seekRelief.revealHistory.description"}}</p>
       </details>
     </div>
     
     <div class="collapsable box">
-      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i> Roll</a>
+      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.roll.label"}}</a>
       <details>
-        <summary>Seek relief from the horror</summary>
-        <p>TBD</p>
+        <summary>{{localize "ATDC.actor.seekRelief.seekReliefHorror.label"}}</summary>
+        <p>{{localize "ATDC.actor.seekRelief.seekReliefHorror.description"}}</p>
       </details>
     </div>
   </div>
