added gear section

--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -62,7 +62,8 @@
       </select>
     </div>
     <div class="box">
-      left bottom
+      <h3>{{localize "ATDC.actor.gear.label"}}</h3>
+      <p>{{{localize 'ATDC.actor.gear.description'}}}</p>
     </div>
   </div>
 
