--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -268,6 +268,13 @@ nav.sheet-tabs {
         }
       }
     }
+
+    .gear {
+
+      p.description {
+        font-size: 0.9em;
+      }
+    }
   }
 }
 
