--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -70,14 +70,14 @@
           <div class="item-tags">Tags</div>
           <div class="item-load">Load</div>
           <div class="item-controls">
-            <a class="item-control item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i> Add item</a>
+            <a class="item-control item-create" title="Create item" data-type="gear"><i class="fas fa-plus"></i> Add item</a>
           </div>
         </li>
         {{#each gear as |item id|}}
           <li class="item flexrow" data-item-id="{{item._id}}">
             <div class="item-name">
               <div class="item-image">
-                <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
+                <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
               </div>
               <h4>{{item.name}}</h4>
             </div>
